# src/controllers/communityController.js
@@ -1,5 +1,6 @@
 import { createError } from "../error";
 import Community from "../models/Community";
+import Comment from "../models/Comment";
 
 export const postPosting = async (req, res, next) => {
   try {
@@ -25,7 +26,9 @@ export const postPosting = async (req, res, next) => {
 export const getPostingById = async (req, res, next) => {
   try {
     const { id } = req.params;
-    const posting = await Community.findOne({ _id: id });
+    const posting = await Community.findById(id)
+      .populate("comments")
+      .populate("userId");
     if (!posting) return next(createError(404, "Posting is not found"));
     res.status(200).json({ success: true, posting });
   } catch (err) {
@@ -62,6 +65,30 @@ export const getPostingsByCategory = async (req, res, next) => {
     let responsePostings = [];
     responsePostings = await Community.find({ category });
     res.status(200).json({ success: true, responsePostings });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const postComment = async (req, res, next) => {
+  try {
+    const comment = await Comment.create({
+      userId: req.user.id,
+      postingId: req.params.id,
+      desc: req.body.desc,
+    });
+    const posting = await Community.findOneAndUpdate(
+      { _id: req.params.id },
+      {
+        $push: {
+          comments: {
+            _id: comment._id,
+          },
+        },
+      },
+      { new: true }
+    ).populate("comments");
+    res.status(200).json({ success: true, posting });
   } catch (err) {
     next(err);
   }
