# src/models/Comment.js
@@ -1,0 +1,22 @@
+import mongoose from "mongoose";
+
+const commentSchema = mongoose.Schema(
+  {
+    userId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      ref: "User",
+    },
+    postingId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      ref: "Community",
+    },
+    desc: { type: String, required: true },
+  },
+  { timestamps: true }
+);
+
+const Comment = mongoose.model("Comment", commentSchema);
+
+export default Comment;
